--- a/guide/glossary.tex
+++ b/guide/glossary.tex
@@ -21,3 +21,18 @@
 	name=FOV,
 	description={Field of View}
 }
+\newglossaryentry{openvr}
+{
+name=OpenVR,
+description={''[...] an API and runtime that allows access to virtual reality hardware from multiple vendors without requiring that applications have specific knowledge of the hardware they are targeting''\cite{valvesoftwareOpenVRSDK2024}}
+}
+\newglossaryentry{roi}
+{
+	name=ROI,
+	description={Region of Interest}
+}
+\newglossaryentry{hu}
+{
+	name=Houndsfield unit (HU),
+	description={A mapping of the linear attenuation coefficient of the X-ray beam on to an arbitrary scale called Houndsfield scale\cite{denotterHounsfieldUnit2024}}
+}
