--- a/guide/main.tex
+++ b/guide/main.tex
@@ -13,6 +13,7 @@
 \usepackage[backend=biber,style=ieee]{biblatex}
 \usepackage{tabto}
 \usepackage{graphicx} % u.a. JPGs als Grafiken
+\usepackage[noabbrev]{cleveref}
 \usepackage{svg} % include svg pictures
 \svgpath{ {./images/} }
 \graphicspath{ {./images/} }
