--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -1,3 +1,21 @@
+@inproceedings{aghajaniSoftwareDocumentationPractitioners2020,
+  title = {Software Documentation: The Practitioners' Perspective},
+  shorttitle = {Software Documentation},
+  booktitle = {Proceedings of the {{ACM}}/{{IEEE}} 42nd {{International Conference}} on {{Software Engineering}}},
+  author = {Aghajani, Emad and Nagy, Csaba and Linares-Vásquez, Mario and Moreno, Laura and Bavota, Gabriele and Lanza, Michele and Shepherd, David C.},
+  date = {2020-06-27},
+  pages = {590--601},
+  publisher = {ACM},
+  location = {Seoul South Korea},
+  doi = {10.1145/3377811.3380405},
+  url = {https://dl.acm.org/doi/10.1145/3377811.3380405},
+  urldate = {2024-08-04},
+  eventtitle = {{{ICSE}} '20: 42nd {{International Conference}} on {{Software Engineering}}},
+  isbn = {978-1-4503-7121-6},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/NLIGTHG2/Aghajani et al. - 2020 - Software documentation the practitioners' perspec.pdf}
+}
+
 @article{ahmadMachineLearningMeets2020,
   title = {Machine {{Learning Meets Communication Networks}}: {{Current Trends}} and {{Future Challenges}}},
   shorttitle = {Machine {{Learning Meets Communication Networks}}},
@@ -231,6 +249,19 @@
   file = {/home/ro/Zotero/storage/JSHA67KQ/Buytaert et al. - 2013 - MicroCT versus sTSLIM 3D Imaging of the Mouse Coch.pdf}
 }
 
+@book{calaveraLinuxObservabilityBPF2019,
+  title = {Linux Observability with {{BPF}}: Advanced Programming for Performance Analysis and Networking},
+  shorttitle = {Linux Observability with {{BPF}}},
+  author = {Calavera, David and Fontana, Lorenzo},
+  date = {2019},
+  edition = {First edition},
+  publisher = {O'Reilly Media, Inc},
+  location = {Beijing [China] ; Sebastopol, CA},
+  isbn = {978-1-4920-5020-9},
+  pagetotal = {162},
+  keywords = {Linux,Operating systems (Computers)}
+}
+
 @article{chuRobustOptimizationIntensity2005,
   title = {Robust Optimization for Intensity Modulated Radiation Therapy Treatment Planning under Uncertainty},
   author = {Chu, Millie and Zinchenko, Yuriy and Henderson, Shane G and Sharpe, Michael B},
@@ -244,6 +275,22 @@
   doi = {10.1088/0031-9155/50/23/003},
   url = {https://iopscience.iop.org/article/10.1088/0031-9155/50/23/003},
   urldate = {2023-09-23}
+}
+
+@incollection{denotterHounsfieldUnit2024,
+  title = {Hounsfield {{Unit}}},
+  booktitle = {{{StatPearls}}},
+  author = {DenOtter, Tami D. and Schubert, Johanna},
+  date = {2024},
+  eprint = {31613501},
+  eprinttype = {pmid},
+  publisher = {StatPearls Publishing},
+  location = {Treasure Island (FL)},
+  url = {http://www.ncbi.nlm.nih.gov/books/NBK547721/},
+  urldate = {2024-07-09},
+  abstract = {The Hounsfield unit (HU) is a relative quantitative measurement of radio density used by radiologists in the interpretation of computed tomography (CT) images. The absorption/attenuation coefficient of radiation within a tissue is used during CT reconstruction to produce a grayscale image. The physical density of tissue is proportional to the absorption/attenuation of the X-ray beam. The Hounsfield unit, also referred to as the CT unit, is then calculated based on a linear transformation of the baseline linear attenuation coefficient of the X-ray beam, where distilled water (at standard temperature and pressure) is arbitrarily defined to be zero Hounsfield Units and air defined as -1000 HU. The upper limits can reach up to 1000 for bones, 2000 for dense bones like the cochlea, and more than 3000 for metals like steel or silver. The linear transformation produces a Hounsfield scale that displays as gray tones. More dense tissue, with greater X-ray beam absorption, has positive values and appears bright; less dense tissue, with less X-ray beam absorption, has negative values and appears dark. The Hounsfield unit was named after Sir Godfrey Hounsfield, recipient of the Nobel Prize in Physiology or Medicine in 1979, for his part in the invention of CT, as it had immediate recognition as a revolutionary diagnostic instrument.},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/K2BTVDGY/NBK547721.html}
 }
 
 @article{devineMusMorphDatabaseStandardized2022,
@@ -1782,6 +1829,18 @@
   file = {/home/ro/Zotero/storage/CE3WEIHM/Unkelbach and Paganetti - 2018 - Robust Proton Treatment Planning Physical and Bio.pdf}
 }
 
+@software{valvesoftwareOpenVRSDK2024,
+  title = {{{OpenVR SDK}}},
+  author = {{ValveSoftware}},
+  date = {2024-03-27},
+  location = {Washington},
+  url = {https://github.com/ValveSoftware/openvr},
+  urldate = {2024-07-07},
+  abstract = {OpenVR is an API and runtime that allows access to VR hardware from multiple vendors without requiring that applications have specific knowledge of the hardware they are targeting. This repository is an SDK that contains the API and samples. The runtime is under SteamVR in Tools on Steam.},
+  organization = {Valve Corporation},
+  version = {2.5.1}
+}
+
 @article{verdelisMicroCTMorphometryAnalysis2011,
   title = {{{MicroCT}} Morphometry Analysis of Mouse Cancellous Bone: {{Intra-}} and Inter-System Reproducibility},
   shorttitle = {{{MicroCT}} Morphometry Analysis of Mouse Cancellous Bone},
@@ -2022,12 +2081,12 @@
   author = {Zhang, Xiang and Yao, Lina and Wang, Xianzhi and Monaghan, Jessica and Mcalpine, David and Zhang, Yu},
   date = {2020-10-21},
   eprint = {1905.04149},
-  eprinttype = {arxiv},
+  eprinttype = {arXiv},
   eprintclass = {cs, eess, q-bio},
   url = {http://arxiv.org/abs/1905.04149},
   urldate = {2022-09-28},
   abstract = {Brain-Computer Interface (BCI) bridges the human's neural world and the outer physical world by decoding individuals' brain signals into commands recognizable by computer devices. Deep learning has lifted the performance of brain-computer interface systems significantly in recent years. In this article, we systematically investigate brain signal types for BCI and related deep learning concepts for brain signal analysis. We then present a comprehensive survey of deep learning techniques used for BCI, by summarizing over 230 contributions most published in the past five years. Finally, we discuss the applied areas, opening challenges, and future directions for deep learning-based BCI.},
-  pubstate = {preprint},
+  pubstate = {prepublished},
   keywords = {Computer Science - Human-Computer Interaction,Computer Science - Machine Learning,Electrical Engineering and Systems Science - Signal Processing,Quantitative Biology - Neurons and Cognition},
   file = {/home/ro/Zotero/storage/M45KEXRZ/Zhang et al. - 2020 - A Survey on Deep Learning-based Non-Invasive Brain.pdf;/home/ro/Zotero/storage/N7CTKJWH/1905.html}
 }
