--- a/guide/Introduction.tex
+++ b/guide/Introduction.tex
@@ -122,18 +122,18 @@ Note: as of \today
 
 \subsubsection{Hardware requirements}
 \begin{itemize}
-	\item Memory: At least 4 Gigabytes, more is strongly recommended.\\ The 3D Slicer wiki mentions needing about 10 times more memory than the amount of data you plan to load.\\ 3D Slicer on its own uses about 456 Megabytes of RAM. After loading a 26.17MiB Dataset it consumes about 614 MB.
+	\item Memory: At least 4 Gigabytes, more is strongly recommended.\\The 3D Slicer wiki mentions needing about 10 times more memory than the amount of data you plan to load.\\ 3D Slicer on its own uses about 456 Megabytes of RAM. After loading a 26.17MiB Dataset it consumes about 614 MB.
 	\item \gls{cpu}: 3D Slicer uses multi-threading for some calculation and will thus benefit from a multi-core CPU.
 	\item \gls{gpu}: A dedicated GPU is recommended but not required as 3D Slicer only uses it for interactive volume rendering. If you restrict your usage to the 2D views, you will hardly ever use your graphics card.
 \end{itemize}
 
 \subsubsection{Hardware recommendations}
-
+The following points are not strictly needed in order to use 3D Slicer but they make working with the software a lot easier.
 \begin{itemize}
-	\item Input devices: 3D Slicer supports Mice, touchpads, pens, graphic tablets and OpenVR headsets. The easiest input method though is a 3 button Mouse with a mouse wheel.
+	\item Input devices: 3D Slicer supports Mice, touchpads, pens, graphic tablets and \gls{openvr} headsets. The easiest input method though is a 3 button Mouse with a mouse wheel.
 	\item Internet connection: for downloading extensions, online documentation and sample data sets.
 	\item \gls{vram}: for interactive volume rendering it is recommended to have more GPU texture memory than the data set you plan to load.
-	\item A large display or monitor with a decent screen resolution. I would recommend at least a 14 inch screen with 1920x1080 resolution or larger.
+	\item A large display or monitor with a decent screen resolution. A 14 inch screen or larger is strongly advised. Screen resolution does not need to exceed 1920x1080, but going below 720p is also not advisable.
 \end{itemize}
 
 
@@ -173,10 +173,9 @@ A quick overview of these areas is provided by Figure \ref{fig:slicerView}:
 	\item Status bar
 \end{enumerate}
 
-
-
 \pagebreak
-\subsubsection{ The view area }
+
+\subsubsection{The view area} \label{sec:view_area}
 By default 3D Slicer shows the view area (see Figure \ref{fig:4upview}) with three 2D slice views and the interactive 3D view at the top right.\\
 \noindent
 \begin{figure}[h!] % h - here
@@ -190,10 +189,10 @@ By default 3D Slicer shows the view area (see Figure \ref{fig:4upview}) with thr
 \end{figure}
 
 \noindent
-3D Slicer calls this the 'Four-up' view.\\
+3D Slicer calls this the \texttt{Four-up} view.\\
 
 \noindent
-There is a numerous amount of view presets to choose from by clicking on the 'change view' option in the toolbar: Figure \ref{fig:4upview}:5.\\
+There is a numerous amount of view presets to choose from by clicking on the \texttt{change view} option in the toolbar: Figure \ref{fig:4upview}:5.\\
 
 \noindent
 Each slice view has its own scroll bar (Figure \ref{fig:4upview}:4).
@@ -204,137 +203,211 @@ Scrollbar controls:
 \begin{itemize}
 	\item left click and drag the scrollbar
 	\item mouse wheel
-	\item 'B' and 'F' Keys
+	\item \texttt{B} and \texttt{F} Keys
 	\item up, down, left and right arrow keys
 \end{itemize}
 
 \noindent
-To maximize a single slice view, click on the 'Maximize view' button (Figure \ref{fig:4upview}:3). Click it again to return to the previous layout. Double left-clicking on the slice has the same effect.\\
+To maximize a single slice view, click on the \texttt{Maximize view} button (Figure \ref{fig:4upview}:3). Click it again to return to the previous layout. Double left-clicking on the slice has the same effect.\\
 
 \noindent
-'Reset \gls{fov}' can be used to reset the zoom level and shift the slice into its isocenter (Figure \ref{fig:4upview}:2). The 'R' key has the same effect.\\
+'Reset \gls{fov}' can be used to reset the zoom level and shift the slice into its isocenter (Figure \ref{fig:4upview}:2). The \texttt{R} key has the same effect.\\
 
 \noindent
-The pin icon (Figure \ref{fig:4upview}:1) brings up a submenu:
+The pin icon (see Figure \ref{fig:pinMenu}:1) brings up a submenu.\\
+\noindent
+Here (Figure \ref{fig:pinMenu}:2) it is possible to quickly change the displayed dataset if more than one has been loaded.\\
+Change the displayed slice plane by clicking on Figure \ref{fig:pinMenu}:3.\\
+Toggle slice visibility in 3D views: Figure \ref{fig:pinMenu}:4.\\
+Clicking on the \texttt{double arrow} button (see Figure \ref{fig:pinMenu}:5) will reveal more configuration options, which this guide will not cover, as they are not usually needed for segmentation tasks. However the 3D Slicer documentation provides more information about this submenu: \url{https://slicer.readthedocs.io/en/latest/user_guide/user_interface.html#slice-view}
+\begin{figure}[h!] % h - here
+	\centerline{ % center a single element on page, from: https://tex.stackexchange.com/a/4438
+		\includegraphics[
+			% scale=0.2
+			width=0.95\paperwidth
+		]{pinMenu.png}}
+	\caption{3D Slicer pin menu}
+	\label{fig:pinMenu}
+\end{figure}
+\pagebreak
+
+\subsubsection{The module panel}
+Figure \ref{fig:slicerView}:2 the module panel displays options, tools and information of the currently loaded module.
+
+\subsubsection{The Toolbar}
+\begin{figure}[h!] % h - here
+	\centerline{ % center a single element on page, from: https://tex.stackexchange.com/a/4438
+		\includegraphics[
+			% scale=0.2
+			width=0.95\paperwidth
+		]{toolbar.png}}
+	\caption{3D Slicer toolbar}
+	\label{fig:toolbar}
+\end{figure}
 
 \noindent
-This layout can be customized to a great extent if needed, but before you start customizing the view area, check if a pre-made view layout covers your needs.
-Use the view layout selection menu to change the currently displayed layout. This menu also comes in handy if you changed the layout and quickly want to change it back without manually undoing all your customizations.
-Each 2D view area has its own scroll bar, (TODO)
+The far left end of 3D Slicers toolbar holds buttons for loading and saving data.
+Loading data  from a file or directory can be done via the \texttt{Add Data} button' Figure \ref{fig:toolbar}:1.\\
+Keyboard shortcut: \texttt{Ctrl + o}\\
+The next button (Figure \ref{fig:toolbar}:2) loads the \texttt{Add DICOM Data} module, which can also load data from files or directories and save it to 3D Slicers on disk DICOM database.\\
+Saving data can be done via clicking on the \texttt{Save Data} button (Figure \ref{fig:toolbar}:3).\\Keyboard shortcut: \texttt{Ctrl + s}\\
+Figure \ref{fig:toolbar}:4 marks the module toolbar. Clicking on the lens button opens a full text search for all installed modules.\\
+Keyboard shortcut: \texttt{Ctrl + f}\\
+Loadable modules can also be found via the dropdown list right next to the lens icon.
+3D Slicer keeps track of the recently used modules and allows to quickly return to the most recent eight\footnote{the amount can be configured in the settings menu} modules.
+Either via the \texttt{Modules history} dropdown list or the forward and back buttons (Figure \ref{fig:toolbar}:4).
+The toolbar has a designated part for \texttt{Favorite Modules} (Figure \ref{fig:toolbar}:5), which can be fully customized via the settings menu.\\
+Figure \ref{fig:toolbar}:6 can be used to change the view layout, like mentioned in \cref{sec:view_area}.\\
+3D Slicer has different mouse modes, where depending on the selected mode, the mouse has different functionalities. By default \texttt{translate/rotate view} is selected (see: Figure \ref{fig:toolbar}:7).\\
+Keyboard shortcuts:\\
+\texttt{right click + mouse drag} to zoom in and out.\\
+\texttt{Ctrl + mouse wheel} to zoom in and out.\\
+\texttt{Shift + left mouse click + drag} pan view.\\
+\texttt{Shift + move mouse} display ROI under mouse in all views, 3D Slicer calls this the crosshair.\\
+\noindent
+The icon to the right is called \texttt{adjust window/level}.\\
+\texttt{Left click} and drag to create a ROI, 3D Slicer then tries to find the optimal window and center for that ROI.\\
+Alternatively hold \texttt{Ctrl} and \texttt{left mouse}, then drag the mouse to adjust the window manually.\\
+The final button of this part of the toolbar toggles an additional markups toolbar on and off, this guide will not go into further detail as this is not needed for segmentation.\\
+3D Slicer has a build in screenshot and screen recording module as can be seen in Figure \ref{fig:toolbar}:8.\\
+To toggle visibility of the crosshair, that has been mentioned above the left button in Figure \ref{fig:toolbar}:9 can be used. The button to the right of that toggles slice intersection lines on and off.\\
+Finally, on the right end (see: Figure \ref{fig:toolbar}:10) of the toolbar 3D Slicer has buttons to open a Python console window and opening the \texttt{Extension Manager}.
 
-\subsubsection{Zitate sind für wissenschaftliche Arbeiten unerlässlich}
-
-Für das Arbeiten mit Quellen, empfehle ich Zotero (oder Mendeley).
-Natürlich geht's auch die Quellen direkt aus zB Scholar im \textit{bibtex} Format ins Verzeichnis (= *.bib-Datei) zu kopieren.
-
-\subsubsection{Auf Grafiken kann selten verzichtet werden}
-Grafiken
-
-\subsubsection{Formeln sind in der angewandeten Informatik seltener anzutreffen}
-Die folgende Formel ist als eigenständige Formel nummeriert:
-\begin{equation}
-	\frac{\partial^2 }{\partial x^2}  % Online Formeleditor (google!) wirkt Wunder!
-\end{equation}
-
-Formeln können aber auch direkt in den Text $\frac{\partial^2 }{\partial x^2}$, was allerdings schwer zu lesen ist.
-Für die Formeln in \LaTeX gibt's im Web eigene \textit{Cheat Sheets}, schließlich wurde es extra für den Formelsatz entwickelt.
-
-
-\subsubsection{Tabellen gehören ohne Gitternetzlininen (booktabs Stil)}
-Tabellen im Booktabs Stil sind professioneller gestaltet und lenken nicht durch Gitternetzlinien ab. Das ist gut so, denn welche Daten haben es schon verdient, ihr Leben hinter Gittern zu verbringen?
-Zum Glück, gibt's dafür Online Editoren, denn von der Usability her, ist das händische Setzen einer Tabelle eine Katastrophe.
-
-% \begin{table}[h]
-
-% \centering
-% \begin{tabular}
-%\toprule
-% ID & \multicolumn{1}{l}{Farbe} & \multicolumn{1}{l}{Anteil} \\ \midrule
-% 1  & rot                       & 255                        \\
-% 2  & grün                      & 255                        \\
-% 3  & blau                      & 0                          \\ \bottomrule
-% \end{tabular}
-% \caption{Tabellen werden fallweise auch oben beschriftet. Dann einfach die caption im Quellcode an die richtige Stelle verschieben.}
-% \end{table}
-
-
-\subsubsection{Programmcode darf nur auszugsweise in die Arbeit}
-
-Eigentlich gehören komplette Codelistings in den Anhang.
-Wenn aber in der Arbeit zB ein Algorithmus erläutert werden soll, dann gehört das natürlich direkt in die Arbeit.
-
-Verbatim ist dabei die einfachste Variante für Programmcode.
-Ausgefeilter geht's dann zB mit lstlistings zur Sache, wo auch Syntax Highlighting vorgenommen werden kann. \\
-
-Müssen Klassen-/Methoden-/Variablennamen im Fließtext erwähnt werden, bietet sich ein Inline-Verb-Block an, mit dem kann auf eine \verb|Class1.Method1()| Bezug genommen werden, ohne dass diese als zu lesendes Wort missverstanden wird. %PHR
-
-\subsubsection{Wie man mit Aufzählungen verfährt}
-
-Nummerierte Aufzählungen werden nur dann eingesetzt, wenn wirklich eine Reihenfolge vorliegt.
-Kann auch geschachtelt werden (siehe Beispiel).
-
-\begin{enumerate}
-	\item Erster Schritt
-	\item Zweiter Schritt
-	      \begin{enumerate}
-		      \item erster Subschritt zu Schritt zwei
-		      \item zweiter Subschritt zu Schritt zwei
-	      \end{enumerate}
-	\item Dritter Schritt
-\end{enumerate}
-
-Aufzählungen, die keine zwingende Reihenfolge wiedergeben werden durch \textit{Bullet Points} formatiert.
-In folgenden Beispiel wird auf Schachtelung verzichtet, obwohl sie ohne weiteres möglich wäre.
-
+\subsubsection{The Application Menu}
+See Figure \ref{fig:slicerView}:4. %TODO
 \begin{itemize}
-	\item grüner Tee
-	\item schwarzer Tee
-	\item weisser Tee
-	\item aromatisierter Tee
-	\item Kräuterteee
+	\item \texttt{File}: Loading and saving data, download sample data, unloading data and close 3D Slicer
+	\item \texttt{Edit}: Cut, Copy, Paste and the \texttt{Settings Menu}
+	\item \texttt{View}: Show or hide additional windows and toolbars. Open the \texttt{Extension Manager}, \texttt{Python console}, \texttt{Error Log} and change the view layout.
+	\item \texttt{Help}: Access online documentation.
 \end{itemize}
 
-\subsubsection{Ein paar persönliche Tipps zum Arbeiten - bitte ohne Scheu ergänzen!}
+\subsubsection{The Data Probe}
+\begin{figure}[h!] % h - here
+	\centerline{ % center a single element on page, from: https://tex.stackexchange.com/a/4438
+		\includegraphics[
+			% scale=0.2
+			width=0.95\paperwidth
+		]{dataprobe.png}}
+	\caption{3D Slicer Dataprobe}
+	\label{fig:dataprobe}
+\end{figure}
 
-Jeden Satz in einer eigenene Zeile - das hab ich zwar schon erwähnt, ist für mich aber eine wirkliche Hilfe, wenn man sich einmal daran gewöhnt hat.
+\noindent
+The \texttt{Data Probe} shows useful information about the data currently being displayed. More specifically it informs the user about the ROI under the cursor position.\\
+To start using it, just hover the mouse cursor over a ROI, if the cursor is moved, the data probe will update in real time.\\
+Most notable information shown:\\
+The numbers in brackets in figure \ref{fig:dataprobe}:1 display the x-, y- and z-Position of the ROI. After that, outside the brackets, it displays the \gls{hu} value of that ROI (Figure \ref{fig:dataprobe}:2).\\
+In Figure \ref{fig:dataprobe}:3 the data probe shows which segmentation ROI belongs to if any.\\
+Figure \ref{fig:dataprobe}:4 displays the currently loaded dataset.
 
-Hervorhebungen im Text \textit{nie} mit fett oder unterstrichen, sonderm \textit{immer} mit kursivem Text.
-Das kriegt man entweder durch \textit{textit} hin oder \textit{emph}
+\subsubsection{The Status Bar}
+The status bar located on the bottom of the 3D Slicer window, is of no great importance during normal operation. Notably the \texttt{X} icon on the far right opens the error log, which may be useful for debugging.
 
-(Harte) Zeilenumbrüche macht man mit einem doppelten Backslash, Absatzumbrüche hingegen durch mehr als 2 Absatzschaltungen im Quelltext.
-Die Anzahl der Leerzeilen wird dabei nicht berücksichtigt, was zur schöneren Strukturierung des Quelltexts beiträgt.
+% \pagebreak
+% Für das Arbeiten mit Quellen, empfehle ich Zotero (oder Mendeley).
+% Natürlich geht's auch die Quellen direkt aus zB Scholar im \textit{bibtex} Format ins Verzeichnis (= *.bib-Datei) zu kopieren.
 
-Kommentare helfen, nichts zu vergessen.
-% nicht vergessen!
+% \subsubsection{Auf Grafiken kann selten verzichtet werden}
+% Grafiken
 
-Quick \& Dirty -- die Rohversion der Arbeit sollte möglichst zügig verfasst werden.
-Das hilft, den roten Faden nicht zu verlieren.
-Überarbeiten, umformulieren, Grafiken usw einfügen und überhaupt verschönern kann man später.
+% \subsubsection{Formeln sind in der angewandeten Informatik seltener anzutreffen}
+% Die folgende Formel ist als eigenständige Formel nummeriert:
+% \begin{equation}
+% 	\frac{\partial^2 }{\partial x^2}  % Online Formeleditor (google!) wirkt Wunder!
+% \end{equation}
 
-Warnungen (gelbes Dreieck) in Overleaf betreffen meist \textit{overfull boxes} d.h. der Text ist zu lang.
-Bis zur finalen Version können diese ignoriert werden.
-Fallen sie dann tatsächlich ins Gewicht (nur dann!) kann man versuchen, diese durch manuelle Silbentrennung hinzukriegen.
-
-Querverweise verwenden die \textit{labels} zB bei Grafiken oder Tabellen und werden mit \textit{ref} oder \textit{pageref} eingefügt.
-
-Fast nicht zu entdecken: die kleinen Dreiecke neben den Zeilennummern in Oveleaf.
-Damit kann man den Bereich \textit{einfalten}, was zur Übersicht beiträgt.
-
-Wenn man in der Vorschau doppelt in den Text klickt, springt man im Editor auf die Stelle im LaTeX-Quellcode.
-
-Wenn man länger AFK war, dann kann's sein, dass man aus Overleaf abgemeldet ist.
-Bei mir hat's noch NIE funktionert, sich über Button neu zu verbinden - es war immer ein Aussteigen - Einsteigen notwendig.
-
-Wer sich von den überwältigenden Möglichkeiten mit LaTeX beeindrucken lassen will, googelt nach \textit{Tikz}.
-Da gibt's dann fast Nix, was es nicht gibt.
-
-Grundsätzlich ist bei der Arbeit mit \LaTeX Google ein guter Freund.
-Die Community ist riesig und was man nicht in der sehr guten Hilfe von Overleaf findet, hat in den allermeisten Fällen jemand anderer schon gepostet.
-
-
-
+% Formeln können aber auch direkt in den Text $\frac{\partial^2 }{\partial x^2}$, was allerdings schwer zu lesen ist.
+% Für die Formeln in \LaTeX gibt's im Web eigene \textit{Cheat Sheets}, schließlich wurde es extra für den Formelsatz entwickelt.
 
 
+% \subsubsection{Tabellen gehören ohne Gitternetzlininen (booktabs Stil)}
+% Tabellen im Booktabs Stil sind professioneller gestaltet und lenken nicht durch Gitternetzlinien ab. Das ist gut so, denn welche Daten haben es schon verdient, ihr Leben hinter Gittern zu verbringen?
+% Zum Glück, gibt's dafür Online Editoren, denn von der Usability her, ist das händische Setzen einer Tabelle eine Katastrophe.
+
+% % \begin{table}[h]
+
+% % \centering
+% % \begin{tabular}
+% %\toprule
+% % ID & \multicolumn{1}{l}{Farbe} & \multicolumn{1}{l}{Anteil} \\ \midrule
+% % 1  & rot                       & 255                        \\
+% % 2  & grün                      & 255                        \\
+% % 3  & blau                      & 0                          \\ \bottomrule
+% % \end{tabular}
+% % \caption{Tabellen werden fallweise auch oben beschriftet. Dann einfach die caption im Quellcode an die richtige Stelle verschieben.}
+% % \end{table}
 
 
+% \subsubsection{Programmcode darf nur auszugsweise in die Arbeit}
 
+% Eigentlich gehören komplette Codelistings in den Anhang.
+% Wenn aber in der Arbeit zB ein Algorithmus erläutert werden soll, dann gehört das natürlich direkt in die Arbeit.
+
+% Verbatim ist dabei die einfachste Variante für Programmcode.
+% Ausgefeilter geht's dann zB mit lstlistings zur Sache, wo auch Syntax Highlighting vorgenommen werden kann. \\
+
+% Müssen Klassen-/Methoden-/Variablennamen im Fließtext erwähnt werden, bietet sich ein Inline-Verb-Block an, mit dem kann auf eine \verb|Class1.Method1()| Bezug genommen werden, ohne dass diese als zu lesendes Wort missverstanden wird. %PHR
+
+% \subsubsection{Wie man mit Aufzählungen verfährt}
+
+% Nummerierte Aufzählungen werden nur dann eingesetzt, wenn wirklich eine Reihenfolge vorliegt.
+% Kann auch geschachtelt werden (siehe Beispiel).
+
+% \begin{enumerate}
+% 	\item Erster Schritt
+% 	\item Zweiter Schritt
+% 	      \begin{enumerate}
+% 		      \item erster Subschritt zu Schritt zwei
+% 		      \item zweiter Subschritt zu Schritt zwei
+% 	      \end{enumerate}
+% 	\item Dritter Schritt
+% \end{enumerate}
+
+% Aufzählungen, die keine zwingende Reihenfolge wiedergeben werden durch \textit{Bullet Points} formatiert.
+% In folgenden Beispiel wird auf Schachtelung verzichtet, obwohl sie ohne weiteres möglich wäre.
+
+% \begin{itemize}
+% 	\item grüner Tee
+% 	\item schwarzer Tee
+% 	\item weisser Tee
+% 	\item aromatisierter Tee
+% 	\item Kräuterteee
+% \end{itemize}
+
+% \subsubsection{Ein paar persönliche Tipps zum Arbeiten - bitte ohne Scheu ergänzen!}
+
+% Jeden Satz in einer eigenene Zeile - das hab ich zwar schon erwähnt, ist für mich aber eine wirkliche Hilfe, wenn man sich einmal daran gewöhnt hat.
+
+% Hervorhebungen im Text \textit{nie} mit fett oder unterstrichen, sonderm \textit{immer} mit kursivem Text.
+% Das kriegt man entweder durch \textit{textit} hin oder \textit{emph}
+
+% (Harte) Zeilenumbrüche macht man mit einem doppelten Backslash, Absatzumbrüche hingegen durch mehr als 2 Absatzschaltungen im Quelltext.
+% Die Anzahl der Leerzeilen wird dabei nicht berücksichtigt, was zur schöneren Strukturierung des Quelltexts beiträgt.
+
+% Kommentare helfen, nichts zu vergessen.
+% % nicht vergessen!
+
+% Quick \& Dirty -- die Rohversion der Arbeit sollte möglichst zügig verfasst werden.
+% Das hilft, den roten Faden nicht zu verlieren.
+% Überarbeiten, umformulieren, Grafiken usw einfügen und überhaupt verschönern kann man später.
+
+% Warnungen (gelbes Dreieck) in Overleaf betreffen meist \textit{overfull boxes} d.h. der Text ist zu lang.
+% Bis zur finalen Version können diese ignoriert werden.
+% Fallen sie dann tatsächlich ins Gewicht (nur dann!) kann man versuchen, diese durch manuelle Silbentrennung hinzukriegen.
+
+% Querverweise verwenden die \textit{labels} zB bei Grafiken oder Tabellen und werden mit \textit{ref} oder \textit{pageref} eingefügt.
+
+% Fast nicht zu entdecken: die kleinen Dreiecke neben den Zeilennummern in Oveleaf.
+% Damit kann man den Bereich \textit{einfalten}, was zur Übersicht beiträgt.
+
+% Wenn man in der Vorschau doppelt in den Text klickt, springt man im Editor auf die Stelle im LaTeX-Quellcode.
+
+% Wenn man länger AFK war, dann kann's sein, dass man aus Overleaf abgemeldet ist.
+% Bei mir hat's noch NIE funktionert, sich über Button neu zu verbinden - es war immer ein Aussteigen - Einsteigen notwendig.
+
+% Wer sich von den überwältigenden Möglichkeiten mit LaTeX beeindrucken lassen will, googelt nach \textit{Tikz}.
+% Da gibt's dann fast Nix, was es nicht gibt.
+
+% Grundsätzlich ist bei der Arbeit mit \LaTeX Google ein guter Freund.
+% Die Community ist riesig und was man nicht in der sehr guten Hilfe von Overleaf findet, hat in den allermeisten Fällen jemand anderer schon gepostet.
