--- a/guide/glossary.tex
+++ b/guide/glossary.tex
@@ -36,3 +36,13 @@ description={''[...] an API and runtime that allows access to virtual reality ha
 	name=Houndsfield unit (HU),
 	description={A mapping of the linear attenuation coefficient of the X-ray beam on to an arbitrary scale called Houndsfield scale\cite{denotterHounsfieldUnit2024}}
 }
+\newglossaryentry{mrml}
+{
+	name=MRML,
+	description={Medical Reality Modeling Language (MRML, pronounced “MURml”) is a data model developed to represent all data sets that may be used in medical software applications\cite{kikinis3DSlicerPlatform2014}}
+}
+\newglossaryentry{mrb}
+{
+	name=MRB,
+	description={Medical Reality Bundle) (.mrb, .zip): MRB is a binary format encapsulating all scene data (bulk data and metadata). Internally it uses zip format. \cite{kikinis3DSlicerPlatform2014}}
+}
