--- a/guide/main.tex
+++ b/guide/main.tex
@@ -12,6 +12,8 @@
 \usepackage{appendix} % "Nummerierung" der Anhänge mit A B C ...
 \usepackage[backend=biber,style=ieee]{biblatex}
 \usepackage{tabto}
+\usepackage{pgfplots}
+\pgfplotsset{compat=1.16}
 \usepackage{graphicx} % u.a. JPGs als Grafiken
 \usepackage[noabbrev]{cleveref}
 \usepackage{svg} % include svg pictures
